# real-package-installer

./: CMakeLists.txt  README.md  build.sh  icon0.pdn  pic0.pdn
app/: CMakeLists.txt  bgm.cpp  bgm.h  draw.c  draw.h  err.h  fpkg.h  io.c  io.h  kernel.c  kernel.h  log.h  main.c  main.h  menu.c  menu.h  pkg.c  pkg.h  promote.c  promote.h  psp.c  psp.h  rif.c  rif.h  sfo.c  sfo.h
app/res/sce_sys/livearea/contents/: template.xml
kern/: CMakeLists.txt  fpkg.c  fpkg.h  kplugin.yml  log.h  main.c
